# gcp-memory-bank

./: .gitignore  README.md  TEST_RESULTS.md  pyproject.toml
examples/: basic_usage.py  hermes_bridge_demo.py  openclaw_bridge_demo.py
exploration/: GCP_SESSIONS_INTEGRATION.md
hermes-plugin/: README.md  __init__.py  cli.py  plugin.yaml
hermes-plugin-v2/: README.md  __init__.py  cli.py  client.py  config.py  conftest.py  ingestion.py  observability.py  plugin.yaml  retrieval.py  sessions.py  synthesize.py  tools.py  topics.py
hermes-plugin-v2/tests/: test_provider.py
src/memory_bank/: __init__.py  bridge.py  client.py  config.py  iam.py  ingestion.py  memory.py  models.py  profiles.py  retrieval.py  revisions.py  sessions.py  utils.py
tests/: backfill.py  conftest.py  simulator.py  test_mock_injection.py  test_models.py  test_utils.py
